--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
         <p>The entymology of this project is based on my name, Camille and the mythical caste of King Arthur, Camelot, as well as a play on words; this is a place to store 'a lot'.'</p>
         <p>Ultimately the goal of this project is three fold, to give me a space where I can coerce myself to explore the things I know I want to but don't have the time for in daily life', an exploration of front-end design, explore data science with real non-classroom data. </p>
       </section>
-
       <section>
-          <a href="mailto:camillefromraytheon2023@gmail.com?subject=Resume%20acquisition">Email me for a resume or to chat;</a>
+         <p> <a href="mailto:camillefromraytheon2023@gmail.com?subject=Resume%20acquisition">Email me for a resume or to chat;</a> </p>
       </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
       <section>
           <p> Thank you so much to <a href="http://www.daveliepmann.com">Dave Liepmann's</a> and Edward Tufte for the CSS that makes this project possible, I've recently purchased Edward Tufte's <a href="https://www.amazon.ca/Seeing-Fresh-Eyes-Meaning-Space/dp/1930824009">Seeing with Fresh Eyes: Meaning, Space, Data, Truth</a> and highly reccomend it.
       </section>
