--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>Camille's Lot'</title>
+    <title>Camille's Lot</title>
     <link rel="stylesheet" href="tufte.css"/>
     <link rel="stylesheet" href="latex.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,19 +20,7 @@
       <section>
          <p> <a href="mailto:camillefromraytheon2023@gmail.com?subject=Resume%20acquisition">Email me for a resume or to chat;</a> </p>
       </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <ul id="list"><li><a href="/AellaData/">Aella's Data'</a></li><li><a href="/Based/">Based on What?</a></li></ul>
       <section>
           <p> Thank you so much to <a href="http://www.daveliepmann.com">Dave Liepmann's</a> and Edward Tufte for the CSS that makes this project possible, I've recently purchased Edward Tufte's <a href="https://www.amazon.ca/Seeing-Fresh-Eyes-Meaning-Space/dp/1930824009">Seeing with Fresh Eyes: Meaning, Space, Data, Truth</a> and highly reccomend it.
       </section>
