--- a/index.html
+++ b/index.html
@@ -9,22 +9,24 @@
   </head>
 
   <body>
-    <article>
-      <h1 id="tufte-css">Camille's Lot</h1>
-      <p class="subtitle">Index of Exploration</p>
-      <section>
-        <p>Initially this project was an exploration for a place to store my work in some publically accessible way, after discovery of  <a href="http://www.daveliepmann.com">Dave Liepmann's</a> work on the lessons of Edward Tufte's style, and through learning just enough HTML to crib their style. This project finally came into being .</p>
-        <p>The entymology of this project is based on my name, Camille and the mythical caste of King Arthur, Camelot, as well as a play on words; this is a place to store 'a lot'.'</p>
-        <p>Ultimately the goal of this project is three fold, to give me a space where I can coerce myself to explore the things I know I want to but don't have the time for in daily life', an exploration of front-end design, explore data science with real non-classroom data. </p>
-      </section>
-      <section>
-         <p> <a href="mailto:camillefromraytheon2023@gmail.com?subject=Resume%20acquisition">Email me for a resume or to chat;</a> </p>
-      </section>
-
-      <h2> <ul id="list"><li><a href="./aelladata.html">Aella's Data</a></li></ul> </h2>
-      <section>
-          <p> Thank you so much to <a href="http://www.daveliepmann.com">Dave Liepmann's</a> and Edward Tufte for the CSS that makes this project possible, I've recently purchased Edward Tufte's <a href="https://www.amazon.ca/Seeing-Fresh-Eyes-Meaning-Space/dp/1930824009">Seeing with Fresh Eyes: Meaning, Space, Data, Truth</a> and highly reccomend it.
-      </section>
-    </article>
+      <article>
+          <h1 id="tufte-css">Camille's Lot</h1>
+          <p class="subtitle">Index of Exploration</p>
+          <section>
+              <p>Initially this project was an exploration for a place to store my work in some publically accessible way, after discovery of <a href="http://www.daveliepmann.com">Dave Liepmann's</a> work on the lessons of Edward Tufte's style, and through learning just enough HTML to crib their style. This project finally came into being.</p>
+              <p>The entymology of this project is based on my name, Camille and the mythical caste of King Arthur, Camelot, as well as a play on words; this is a place to store 'a lot'.</p>
+              <p>Ultimately the goal of this project is three fold, to give me a space where I can coerce myself to explore the things I know I want to but don't have the time for in daily life', an exploration of front-end design, explore data science with real non-classroom data.</p>
+          </section>
+          <section>
+              <h2> <a href="./aelladata.html">Housing Policy Data Analaysis Project</a> </h2>
+              <p> This is my first real data analytics project.</p>
+          </section>
+          <section>
+              <p> <a href="mailto:camillefromraytheon2023@gmail.com">Email me for a resume or to chat;</a> </p>
+          </section>
+          <section>
+              <p> Thank you so much to <a href="http://www.daveliepmann.com">Dave Liepmann</a> and Edward Tufte for the CSS that makes this project possible, I've recently purchased Edward Tufte's <a href="https://www.amazon.ca/Seeing-Fresh-Eyes-Meaning-Space/dp/1930824009">Seeing with Fresh Eyes: Meaning, Space, Data, Truth</a> and highly reccomend it.
+          </section>
+      </article>
   </body>
 </html>
