--- a/aelladata.html
+++ b/aelladata.html
@@ -10,31 +10,27 @@
 
 <body>
     <article>
-        <h1 id="Comparative analysis of Housing Policy">Comparative analysis of Housing Policy</h1>
-        <p class="subtitle">Why does every single person around me say housing sucks?!</p>
+        <h1 id="Comparative Analysis of Housing Policy">Comparative Analysis of Housing Policy</h1>
+        <p class="subtitle">Why does every single person around me say housing sucks?</p>
+        <figure class="fullwidth">
+            <img src="img/housing-developments.JPEG" alt="A finished local housing redevelopment that was done due to zoning policy alongside a stripped down single-family house about to be redeveloped" />
+        </figure>
+        <p><i>A finished housing development project, and a stripped down single family home about to be torn down and developed, which was recently rezoned to allow duplexes and townhouses; 2 minutes from my house</i></p>
         <section>
-            <p> The first question I think that’s on the mind of almost all people I know under 40 who aren't living with their parents is; What’s going on with housing? Why does housing feel like it costs so much more? And most importantly, from a political policy lens,<strong> what can we do about it?</strong> </p>
+            <p><b>The first question I think that’s on the mind of almost all people I know under 40 who aren't living with their parents is; What’s going on with housing? Why does housing feel like it costs so much more? And most importantly, from a political policy lens, what can we do about it? </b> </p>
         </section>
         <section>
             <h2 id="Intro; The What"> Intro; The What</h2>
             <p>The problem that can describe the vast majority of housing situations in the North American (or the vibe based feelings of gen Z) real estate market is the increasing lack of starter homes, affordable rent in high-employment and high-earning areas, which gates starting earners out of a geographical economic opportunity zone, as well as increasing pressures with an increasing population and a plateaued level of supply construction.</p>
             <p>It would be a tall order to attempt to model the North American real estate market, but since this is not a unique problem to Calgary, Alberta, Canada, or even North America; I can use a recent set of decisions made within the last couple of years by the City Council of Calgary, responsible for zoning decisions on a scale of 1.4 million people (the population of Calgary), who have attempted to solve the lack of affordable housing models by rezoning large swaths of single-family home idings into duplexes, townhouses, and multi-family rental properties. </p>
-            <p>Calgary, although unique in that it has seen a relatively high increase in population, is stretching its infrastructure on multiple levels. Thus, city planners have had to make relatively radical decisions</p>
-            <label for="mn-demo" class="margin-toggle">&#8853;</label>
-            <input type="checkbox" id="mn-demo" class="margin-toggle" />
-            <span class="marginnote">
-                Radical, according to the typical [North American, car-based, single-family home] city planning history spanning at least the last five decades. I have a paper about this,
-            </span>
+            <p>Calgary, although unique in that it has seen a relatively high increase in population, is stretching its infrastructure on multiple levels. Thus, city planners have had to make relatively radical decisions. Radical, according to the typical [North American, car-based, single-family home] city planning history spanning at least the last five decades. I have a paper about this, LINK PAPER.</p>
+            <p><label for="mn-figure-1" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-figure-1" class="margin-toggle" /><span class="marginnote"><img src="img\ward-1-rezoning-map.png" alt="Blanket Rezoning Map of Ward 1" />The City of Calgary <em>Blanket Rezoning Map</em></span></p>
             <p> The YIMBY theory suggests that increasing housing supply through rezoning, allowing development, and funding new construction, rather than controlling current housing, can alleviate concerns about housing. I want to investigate several things as a result of these decisions.</p>
             <label for="mn-demo" class="margin-toggle">&#8853;</label>
             <input type="checkbox" id="mn-demo" class="margin-toggle" />
             <span class="marginnote">
                 <a href="https://mnolangray.substack.com/">M. Nolan Gray</a> encapsulates and writes on the movement quite thoroughly but in short it is a reaction people who vote down development projects in their areas NIMBY; Not In My Backyard. By agressively campainging for such projects.
             </span>
-            <figure class="fullwidth">
-                <img src="img/housing-developments.JPEG" alt="A finished local housing redevelopment that was done due to zoning policy alongside a stripped down single-family house about to be redeveloped" />
-            </figure>
-            <p> A finished housing development project, and a stripped down single family home about to be torn down and developed, which was recently rezoned to allow duplexes and townhouses; 2 minutes from my house </p>
         </section>
         <section>
             <h2 id="questions">What questions should this project attempt to answer?</h2>
@@ -46,28 +42,11 @@
         <section>
             <h2 id="Variables and Data"> What data do I need?</h2>
             <p> 1. First off I need to know the actual changes, what happened? I need policy analysis of the decisions made to determine the;decisions made, rationale given, expected outcomes. Given to the city/the public by the council</p>
-            <p><label for="mn-figure-1" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-figure-1" class="margin-toggle" /><span class="marginnote"><img src="img\ward-1-rezoning-map.png" alt="Blanket Rezoning Map" />The City of Calgary” <em>Blanket Rezoning Map</em></span></p>
-            <p> 2. Longitudinal average housing prices/rent per community</p>
-            <label for="mn-demo" class="margin-toggle">&#8853;</label>
-            <input type="checkbox" id="mn-demo" class="margin-toggle" />
-            <span class="marginnote">
-                Scaling heavily towards communities with easy access to high-income earning working areas. My rationale for the scaling of the weight is that new cheap housing can always be found, North Dakota/Yellowhorse/developing projects around a city, the yet-to-be-developed infrastructure will always result in cheap housing costs but the rationale given as well as the areas targeted, were specifically designed to lower costs and restrictions on smaller, denser and more urban (connected to infrastructure) projects.
-            </span>
+            <p> 2. Longitudinal average housing prices/rent per community. Scaling heavily towards communities with easy access to high-income earning working areas. My rationale for the scaling of the weight is that new cheap housing can always be found, North Dakota/Yellowhorse/developing projects around a city, the yet-to-be-developed infrastructure will always result in cheap housing costs but the rationale given as well as the areas targeted, were specifically designed to lower costs and restrictions on smaller, denser and more urban (connected to infrastructure) projects.</p>
             <p> 3. Delta of the changes and results; an accounting of changes per severity of modifications made by the city of council to the changes in 2. </p>
-            <p> 3.1 It would be prudent to check for confounding variables; the budget allocated towards new housing projects, alongside possible federal and provincial incentives, could heavily skew the data from a zoning policy perspective. It’s very unkind of the government to spend money alongside policy changes, such that my data becomes unclean.</p>
-            <label for="mn-demo" class="margin-toggle">&#8853;</label>
-            <input type="checkbox" id="mn-demo" class="margin-toggle" />
-            <span class="marginnote">
-                I could attempt to mitigate this by seeing what incentives were made, if the changes were federal, then comparing multiple similar Canadian cities of this level (1.3~ million + similar infrastructure situation) could help, unless these cities have also begun to change local policy, I don’t need to do a deep dive of data into them I can just check their respective city council decisions and recent city planning decisions. If it were a provincial incentive, a very similar city to Calgary exists: Edmonton. Leveraging baseline Canadian cities of this level, along with the changes in Edmonton, could help alleviate some of the exogenous incentive structures impacting the data analysis, if any exist.
-            </span>
-            <p> 4. Community feeling surveys, which should be weighted more heavily towards longitudinal surveys done over the years, as opposed to one-off surveys of changesI live in one of these areas with tons of development. I can run a small study by talking to people on the street, using a combination of small qualitative interviews and quantitative scoring. This allows you to match the answers people give with their scores and identify those trends.</p>
-            <label for="mn-demo" class="margin-toggle">&#8853;</label>
-            <input type="checkbox" id="mn-demo" class="margin-toggle" />
-            <span class="marginnote">
-                This is a much softer factor and could change depending on who was surveyed and the methodology used by the survey researchers. Having a longitudinal linkage of surveys done by the same team, with the same methods and questions, year after year, would be much more valuable and less confounding for seeing trends, as opposed to semi-reaction-based one-off surveys.
-            </span>
+            <p> 3.1 It would be prudent to check for confounding variables; the budget allocated towards new housing projects, alongside possible federal and provincial incentives, could heavily skew the data from a zoning policy perspective. It’s very unkind of the government to spend money alongside policy changes, such that my data becomes unclean.I could attempt to mitigate this by seeing what incentives were made, if the changes were federal, then comparing multiple similar Canadian cities of this level (1.3~ million + similar infrastructure situation) could help, unless these cities have also begun to change local policy, I don’t need to do a deep dive of data into them I can just check their respective city council decisions and recent city planning decisions. If it were a provincial incentive, a very similar city to Calgary exists: Edmonton. Leveraging baseline Canadian cities of this level, along with the changes in Edmonton, could help alleviate some of the exogenous incentive structures impacting the data analysis, if any exist.</p>
+            <p> 4. Community feeling surveys, which should be weighted more heavily towards longitudinal surveys done over the years, as opposed to one-off surveys of changesI live in one of these areas with tons of development. I can run a small study by talking to people on the street, using a combination of small qualitative interviews and quantitative scoring. This allows you to match the answers people give with their scores and identify those trends. This is a much softer factor and could change depending on who was surveyed and the methodology used by the survey researchers. Having a longitudinal linkage of surveys done by the same team, with the same methods and questions, year after year, would be much more valuable and less confounding for seeing trends, as opposed to semi-reaction-based one-off surveys.</p>
             <p> 5. Then, outside of the conclusions this data analysis provides on a direct local level, I want to ask broader, less data-intensive questions. Assuming the trends I have identified are generalizable to a US + Canada-based real estate market of mid-level, higher-growth cities. (maybe, maybe not), can we determine anything from a longitudinal review? Was it always just like this? And did other generations just deal with it? Should Gen Z (me) reduce our expectations of housing to reality? </p>
-
         </section>
     </article>
 </body>
