--- a/aelladata.html
+++ b/aelladata.html
@@ -28,13 +28,11 @@
             <p> The YIMBY theory suggests that increasing housing supply through rezoning, allowing development, and funding new construction, rather than controlling current housing, can alleviate concerns about housing. I want to investigate several things as a result of these decisions.</p>
             <label for="mn-demo" class="margin-toggle">&#8853;</label>
             <input type="checkbox" id="mn-demo" class="margin-toggle" />
-            <span class="marginnote">
-                <a href="https://mnolangray.substack.com/">M. Nolan Gray</a> encapsulates and writes on the movement quite thoroughly but in short it is a reaction people who vote down development projects in their areas NIMBY; Not In My Backyard. By agressively campainging for such projects.
-            </span>
+            <span class="marginnote"><a href="https://mnolangray.substack.com/">M. Nolan Gray</a> encapsulates and writes on the movement quite thoroughly but in short it is a reaction people who vote down development projects in their areas NIMBY; Not In My Backyard. By agressively campainging for such projects.</span>
         </section>
         <section>
             <h2 id="questions">What questions should this project attempt to answer?</h2>
-            <p> What *actual* decisions were made, with what rationale, and what was the expected outcome?</p>
+            <p> What changes were made, with what rationale, and what was the expected outcome?</p>
             <p> Did the policy achieve the intended effect on housing? To what degree?</p>
             <p> If new housing has been constructed, is that housing within the class of affordable housing?</p>
             <p> And a fun one, the main cited casualty of expanding housing supply through rezoning is the loss of community. Using the City of Calgary surveys, did this happen and to what degree? What correlation is there between the decisions made and the differences seen in the surveys over the years due to these decisions?</p>
