Remove image for sizing test

--- a/aelladata.html
+++ b/aelladata.html
@@ -12,10 +12,7 @@
     <article>
         <h1 id="Comparative Analysis of Housing Policy">Comparative Analysis of Housing Policy</h1>
         <p class="subtitle">Why does every single person around me say housing sucks?</p>
-        <figure class="fullwidth">
-            <img src="img/housing-developments.JPEG" alt="A finished local housing redevelopment that was done due to zoning policy alongside a stripped down single-family house about to be redeveloped" />
-        </figure>
-        <p><i>A finished housing development project, and a stripped down single family home about to be torn down and developed, which was recently rezoned to allow duplexes and townhouses; 2 minutes from my house</i></p>
+        <p><i>A finished housing development project, across the street from a stripped down single family home about to be torn down and developed. This area (5 minutes from my house) was rezoned a year ago, allowing duplexes and townhouses to be built in place of almost all single family homes.</i></p>
         <section>
             <p><b>The first question I think that’s on the mind of almost all people I know under 40 who aren't living with their parents is; What’s going on with housing? Why does housing feel like it costs so much more? And most importantly, from a political policy lens, what can we do about it? </b> </p>
         </section>
@@ -27,7 +24,7 @@
             <p><label for="mn-figure-1" class="margin-toggle">&#8853;</label><input type="checkbox" id="mn-figure-1" class="margin-toggle" /><span class="marginnote"><img src="img\ward-1-rezoning-map.png" alt="Blanket Rezoning Map of Ward 1" />The City of Calgary <em>Blanket Rezoning Map</em></span></p>
             <p> The YIMBY theory suggests that increasing housing supply through rezoning, allowing development, and funding new construction, rather than controlling current housing, can alleviate concerns about housing. I want to investigate several things as a result of these decisions.</p>
             <label for="mn-demo" class="margin-toggle">&#8853;</label>
-            <input type="checkbox" id="mn-demo" class="margin-toggle"/>
+            <input type="checkbox" id="mn-demo" class="margin-toggle" />
         </section>
         <section>
             <h2 id="questions">What questions should this project attempt to answer?</h2>
@@ -46,6 +43,11 @@
             <p> 4. Community feeling surveys, which should be weighted more heavily towards longitudinal surveys done over the years, as opposed to one-off surveys of changesI live in one of these areas with tons of development. I can run a small study by talking to people on the street, using a combination of small qualitative interviews and quantitative scoring. This allows you to match the answers people give with their scores and identify those trends. This is a much softer factor and could change depending on who was surveyed and the methodology used by the survey researchers. Having a longitudinal linkage of surveys done by the same team, with the same methods and questions, year after year, would be much more valuable and less confounding for seeing trends, as opposed to semi-reaction-based one-off surveys.</p>
             <p> 5. Then, outside of the conclusions this data analysis provides on a direct local level, I want to ask broader, less data-intensive questions. Assuming the trends I have identified are generalizable to a US + Canada-based real estate market of mid-level, higher-growth cities. (maybe, maybe not), can we determine anything from a longitudinal review? Was it always just like this? And did other generations just deal with it? Should Gen Z (me) reduce our expectations of housing to reality? </p>
         </section>
-    </article>
+        <section>
+            <h3 id="Data Sourcing">Data Sourcing</h3>
+
+        </section>
+
+</article>
 </body>
 </html>
