--- a/aelladata.html
+++ b/aelladata.html
@@ -7,21 +7,18 @@
     <link rel="stylesheet" href="latex.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        /* Custom overrides for Tufte CSS, the margin was way too the right*/
         .sidenote,
         .marginnote {
-            margin-right: -40%;
+            margin-right: -30%; /* Reduce this even more */
+            width: 40%; /* Make sidenotes slightly narrower */
         }
 
         section > p,
         section > footer,
         section > table {
-            width: 60%;
+            width: 65%; /* Slightly wider main content */
         }
-
-        figure.fullwidth {
-            max-width: 100%;
-        }
+        
     </style>
 </head>
 
