--- a/aelladata.html
+++ b/aelladata.html
@@ -85,11 +85,10 @@
             <p> 5. Then, outside of the conclusions this data analysis provides on a direct local level, I want to ask broader, less data-intensive questions. Assuming the trends I have identified are generalizable to a US + Canada-based real estate market of mid-level, higher-growth cities. (maybe, maybe not), can we determine anything from a longitudinal review? Was it always just like this? And did other generations just deal with it? Should Gen Z (me) reduce our expectations of housing to reality? </p>
         </section>
         <section>
-            <h3 id="Data Sourcing">Data Sourcing</h3>
+            <h3 id="Data Sourcing">Data Sourcing/Methodology</h3>
             <table>
                 <tr>
-                    <th>Question Trying to be Answered</th>
-                    <th>Source</th>
+                    <th>Question Trying to be Answered</th>                 
                 </tr>
                 <tr>
                     <td>Policy Changes</td>
@@ -117,9 +116,8 @@
                 On top of that, the federal government launched a special tax-free investment fund for a first-time home, as well as enabling the use of upwards of 60,000$ from a retirement fund for one. On top of extra non-linear funding from the N
                 I am left wondering if anything has stayed the same!
             </p>
-            <p> After coming back to this project post-climb and post-run, I continued to search through possible data sources and found the holy grail, the Canada Mortgage and Housing Corporation, which just so happened to compile and (freely) distribute housing information to the general public. Did you know they also have an official podcast?? That talks about the exact question I am attempting to answer from their Deputy Economist??? </p>
-            <span class="marginnote"> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3aEWfGJS0DICK5fHTldE1S?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> </span>
-        
+            <p> After coming back to this project post-climb and post-run, I continued to search through possible data sources and found the holy grail, the Canada Mortgage and Housing Corporation, which just so happened to compile and (freely) distribute housing information to the general public. Did you know they also have an official podcast?? That talks about the exact question I am attempting to answer from their Deputy Economist??? </p> <span class="marginnote"> <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3aEWfGJS0DICK5fHTldE1S?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> </span>
+            <p> The Canada Mortgage and Housing Corporation has the data I need for new construction, new listed rental units on the secondary rental market, alongside average rent and the number of completions across Canada, alongside value of property. </p>
         </section>
 
 </article>
