--- a/aelladata.html
+++ b/aelladata.html
@@ -116,6 +116,7 @@
             </p>
            <span class="marginnote"> After coming back to this project, I continued to search through possible data sources and found the Canada Mortgage and Housing Corporation, which compiled and (freely) distributed housing information to the available to the public. Did you know they also have an official podcast that talks about the exact question I am attempting to answer from their Deputy Economist? </p><iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/3aEWfGJS0DICK5fHTldE1S?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> </span>
            <p> The Canada Mortgage and Housing Corporation has the data I need for new construction, new listed rental units on the secondary rental market, alongside average rent and the number of completions across Canada, alongside value of property. My goal here for data collection is to collect before/after August 6, 2024 since thats when citywide rezoning took effect.  </p>
+           <p> After the first prelimanry glance at data, it seems as if new construction has propped up as a result of the change and the exact same type of construction that is </p>
 
         
         </section> 
